# onedrive-api

./: .gitignore  pyproject.toml  run.py
microsoft_authenticate_code_getter/: __init__.py  code_getter_server_app.py
src/onedrive_api/: __init__.py  common.py  token_getter.py
src/onedrive_token_getter/: __init__.py  client.py  code_getter_server.py  code_getter_server_app.py  server.py
